@@ -77,7 +77,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <argLine>${test.jvm.args}</argLine>
+                    <argLine>${test.jvm.args} --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
@@ -138,7 +138,7 @@
                                         <argument>-XX:+UnlockExperimentalVMOptions</argument>
                                         <argument>-XX:+UseZGC</argument>
                                         <argument>--enable-native-access=ALL-UNNAMED</argument>
-                                        <argument>-Djava.library.path=${native.lib.dir}</argument>
+                                        <argument>-Djava.library.path=${java.library.path}${path.separator}${native.lib.dir}</argument>
                                         <argument>-classpath</argument>
                                         <classpath/>
                                         <argument>org.openjdk.jmh.Main</argument>
