@@ -38,7 +38,6 @@
             -XX:-ZUncommit
             --enable-preview
             --enable-native-access=ALL-UNNAMED
-            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
             -XX:FlightRecorderOptions=stackdepth=256
             -XX:StartFlightRecording=disk=true,filename=target/recording-${maven.build.timestamp}.jfr,maxsize=256m,maxage=10m,settings=profile
         </test.jvm.args>
